# Ingredient-list-maker

./: .flake8  LICENSE  README.md  __init__.py  app.py  delishkitchen_scraper.py  ingredient_utils.py  kurashiru_scraper.py  pyproject.toml  requirements-dev.txt  requirements.txt  setup.cfg  setup.py
.github/workflows/: ci.yml
config/: settings.py
docs/: architecture.md  migration_complete.md  migration_guide.md  project_structure.md  technical_specs.md
src/: __init__.py
src/scrapers/: __init__.py  delishkitchen_scraper.py  kurashiru_scraper.py
src/utils/: __init__.py  ingredient_utils.py  recipe_utils.py  sheet_utils.py
tests/: conftest.py  test_ingredient_utils.py  test_recipe_utils.py
