[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ingredient-list-maker"
version = "1.0.0"
description = "Recipe ingredient list maker for shopping"
requires-python = ">=3.8"
dependencies = [
    "streamlit",
    "gspread", 
    "google-auth",
    "beautifulsoup4",
    "requests"
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "black>=22.0.0", 
    "flake8>=4.0.0",
    "mypy>=0.950",
    "isort>=5.10.0",
    "types-requests",
    "types-beautifulsoup4"
]
